# agentic-johari-window

./: .gitignore  LICENSE  LICENSE-DOCS  README.md  agentic-johari-window.jsx  agentic-johari-window.md  context-window-writeup.md  research-context-window.md  research.md  sample-writeup.md
mcps/context-balance/: README.md  pyproject.toml
mcps/context-balance/context_balance/: __init__.py  detection.py  schemas.py  server.py  storage.py
skills/context-health/: SKILL.md
skills/johari-diagnostic/: SKILL.md
