[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-balance"
version = "0.1.0"
description = "MCP server that detects pruning-retrieval feedback loops in LLM agent context management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Roger Maxwell", email = "that1drifter@users.noreply.github.com" },
]
keywords = ["mcp", "llm", "context-management", "observability", "agents"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
context-balance = "context_balance.server:main"
